[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.30.1" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.30.1" }
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git", tag = "1.5.0" }
toml_datetime = { git = "https://github.com/toml-rs/toml.git", tag = "toml_datetime-v0.6.8" }

